force-app/main/default/objects/Bill__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount</label>
    <summarizedField>Billing_Product__c.Total_Price__c</summarizedField>
    <summaryForeignKey>Billing_Product__c.Bill__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>