force-app/main/default/objects/Bill__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Payment_Method__c</columns>
    <columns>Type__c</columns>
    <columns>Customer__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>