force-app/main/default/objects/Bill__c/listViews/Retail_Bills.listView-meta.xml
<ListView>
    <fullName>Retail_Bills</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Payment_Method__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Retail</value>
    </filters>
    <label>Retail Bills</label>
</ListView>