force-app/main/default/objects/Bill__c/listViews/WholeSale_Bills.listView-meta.xml
<ListView>
    <fullName>WholeSale_Bills</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Payment_Method__c</columns>
    <columns>Type__c</columns>
    <columns>Customer__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Wholesale</value>
    </filters>
    <label>WholeSale Bills</label>
</ListView>